libreto dl link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">THE AWAKENING</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">UNDER CONSTRUCTION</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Libreto</a>
+        <a href="https://www.dropbox.com/s/8j468p0plzw230j/Libreto.pdf?dl=0" class="btn btn-primary js-scroll-trigger">Get Libreto</a>
       </div>
     </div>
   </header>
