--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Libreto</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Libretto</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Follow Us</a>
@@ -55,7 +55,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">THE AWAKENING</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">UNDER CONSTRUCTION</h2>
-        <a href="https://www.dropbox.com/s/8j468p0plzw230j/Libreto.pdf?dl=0" class="btn btn-primary js-scroll-trigger">Get Libreto</a>
+        <a href="https://www.dropbox.com/s/8j468p0plzw230j/Libreto.pdf?dl=0" class="btn btn-primary js-scroll-trigger">Get Libretto</a>
       </div>
     </div>
   </header>
