--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <img src="/img/The awakening-text-outlined.png">
-          <a href="https://www.dropbox.com/s/76cfi2c7syvgqls/Libretto%20-%20The%20Awakening.pdf?dl=0" class="btn btn-primary js-scroll-trigger">Get Libretto</a>
+          <div>
+            <img src="/img/The awakening-text-outlined.png" width="300" height="100">
+          </div>
+          <a href="https://www.dropbox.com/s/76cfi2c7syvgqls/Libretto%20-%20The%20Awakening.pdf?dl=0" class="btn btn-primary js-scroll-trigger" style="margin-top: 50px">Get Libretto</a>
         </div>
       </div>
     </header>
