--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+          
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.dropbox.com/s/76cfi2c7syvgqls/Libretto%20-%20The%20Awakening.pdf?dl=0">Libretto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Libretto</a>
+            <a class="nav-link js-scroll-trigger" href="#instagram">Follow Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Follow Us</a>
+            <a class="nav-link js-scroll-trigger" href="#about">The Awakening</a>
           </li>
         </ul>
       </div>
@@ -52,69 +53,85 @@
 
   <!-- Header -->
   
-    <header class="masthead">
+  <header class="masthead">
 
-      <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-          <div>
-            <img src="img/The awakening-text-outlined.png" style="width: 80%;">
+    <div class="container d-flex h-100 align-items-center">
+      <div class="mx-auto text-center">
+        <div>
+          <img src="img/The awakening-text-outlined.png" style="width: 80%;">
+        </div>
+        <a href="https://www.dropbox.com/s/76cfi2c7syvgqls/Libretto%20-%20The%20Awakening.pdf?dl=0" class="btn btn-primary js-scroll-trigger" style="margin-top: 50px">Get Libretto</a>
+      </div>
+    </div>
+  </header>
+  <!-- Projects Section -->
+  <section id="projects" class="projects-section bg-light">
+    <div class="container">
+
+      <!-- Featured Project Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+        <div class="col-xl-12 col-lg-12 mx-auto text-center" id="instagram">
+          <div style="margin: auto;">
+          <a class="btn btn-primary" href="https://www.instagram.com/magnificat.mccs/"><i class="fab fa-instagram"></i>magnificat.mccs</a>
           </div>
-          <a href="https://www.dropbox.com/s/76cfi2c7syvgqls/Libretto%20-%20The%20Awakening.pdf?dl=1" class="btn btn-primary js-scroll-trigger" style="margin-top: 50px">Get Libretto</a>
+          <div style="margin-top: 30px">        
+          <script src="https://snapwidget.com/js/snapwidget.js"></script>
+          <iframe src="https://snapwidget.com/embed/690159" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+          </div>
+        </div>
+        <div class="col-xl-8 col-lg-7" style="margin-top: 50px">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.png" alt="">
+        </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4>THE AWAKENING</h4>
+          </div>
         </div>
       </div>
-    </header>
-    <!-- Projects Section -->
-    <section id="projects" class="projects-section bg-light">
-      <div class="container">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5" id="about">
+        <p>
+          Saudara-saudara yang terkasih, Selamat Datang di konser MAGNIFICAT Church Choir Studio pada malam hari ini. Tema konser kali ini “The Awakening”, diambil dari satu lagu karya Joseph M. Martin yang akan kami bawakan. Tema ini bukanlah tema yang menjadi benang merah dari seluruh lagu yang akan kami bawakan, tetapi lebih untuk merefleksikan perjalanan Magnificat Choir sendiri. Juga tema ini sekaligus bisa menggambarkan situasi kehidupan di sekeliling kita akhir-akhir ini.
+        </p>
+        <p>
+          <i>“ Saya bermimpi… mimpi yang sunyi, di negeri yang tak jauh. 
+            Negeri gersang, dimana tidak ada burung bernyanyi, tidak ada dentang lonceng gereja dan air-mata tercurah bagai hujan. 
+            Tempat dimana orang penuh kecongkakan, Semua lagu, baik kuat ataupun lemah menjadi pudar, layu dan mati. Sunyi… 
+            Tiada Haleluya, tak pula Hosana yang berkumandang. Tiada lagu kasih, tak ada nina bobo, tiada paduan suara, tiada pemusik dan penari. Gersang, sunyi….
+          BANGUNLAH ! SADARLAH ! Bangunlah jiwaku dan bernyanyilah ! Saatnya tiba untuk memuji. Kesunyian telah lewat dan sudah tiba hari baru. Janganlah musik mati di dalamku. Biarlah rohku bernyanyi selama-lamanya…Biarlah seluruh suara kita disatukan untuk memuliakan Sang Pemberi Nyanyian. Biarlah musik terus HIDUP!”</i>
+          <p>
+            <p>
+              Magnificat Choir tahun ini memasuki tahun pelayanan yang ke 19. Masa yang panjang bagi perjalanan sebuah paduan suara, terutama yang mengkhususkan diri pada karya-karya musik gerejawi. Dimana inti dari kegiatan ini tentunya ditujukan untuk memuliakan Tuhan. Banyak karya-karya indah dengan kesulitan tinggi kami coba latih dan bawakan. Banyak peningkatan teknik bernyanyi dan teknik paduan suara dicoba untuk terus diusahakan. Untuk merasakan keindahan pujian yang telah dituliskan oleh talenta-talenta luar biasa yang Tuhan pimpin sebagai ahli musik yang besar dari berbagai jaman. Berbagai bentuk komposisi paduan suara telah kami coba. Namun dalam perjalanan tersebut, bisa jadi kita terjebak dalam kejenuhan, terjebak dalam kerumitan teknik dan rutinitas berlatih sehingga kita kehilangan pujian di dalam hati kita, menjadi lelah dan hambar. Hanya bernyanyi unuk kesenangan dan kebanggaan sendiri… sehingga menutupi dan menghalangi pujian murni kepada sang Pencipta. Dalam perjalanan panjang ini, tidak terasa usia para anggota setia Magnificat Choir pun juga banyak yang tidak muda lagi, ditambah beban hidup yang kadang semakin meningkat, seringkali membuat hati kitapun merasa gersang dan sunyi, Bagi kami, setelah di tahun lalu kami break dan libur dari penampilan rutin kami; Maka di tahun 2019 ini, kami bangun dan memulai lagi kegiatan ini dengan menambah beberapa anggota muda dalam barisan penyanyi kami. Kita doakan semoga anggota-anggota muda bisa semakin banyak yang bergabung di masa mendatang. Biarlah pujian murni kembali berkumandang dalam hati kami ketika kami menampilkan pagelaran kami ini.
+            </p>
+            <p>
+              Refleksi ke dua, di masa tahun politik yang memanas akhir-akhir ini, kita juga bisa merasakan kegersangan dan kesunyian bagi banyak jiwa di negeri ini. Belum lagi berita-berita dari seluruh dunia yang menunjukkan jatuhnya nilai-nilai kemanusiaan. Bagaimana hidup manusia menjadi tidak ada harganya lagi. Kecongkakan… Hilangnya pujian… Banyaknya cercaan. Hilangnya pengakuan dan pujian akan kebesaran kuasa kasih Tuhan, walaupun nama Tuhan begitu sering diucapkan. Angkara murka, kebencian, kepalsuan, kebohongan serta fitnah merebak dengan luar biasa. Bahkan menghilangkan kehidupan manusia menjadi hal yang biasa, yang sangat sering kita dengar akhir-akhir ini. Kini saatnya bagi kita untuk bangun dari mimpi buruk itu. Untuk mengumandangkan berita kasih, pujian akan kebesaran Tuhan dengan membangun segala hal yang baik bagi kehidupan bersama. Kembali memberikan penghargaan bagi kehidupan kita yang merupakan ciptaan dan anugerah Tuhan.
+              The Awakening…
+            </p>
+            <p>
+              Program konser kali ini sangat beragam. Dari jaman Renaissance sampai modern. Dengan berbagai teks puji-pujian yang beragam pula. 
+              Yang khusus dalam pagelaran ini adalah :  ini pertama kalinya Magnificat Choir menampilkan karya Johann Sebastian Bach. Komposer besar jaman Barok yang karyanya terkenal sulit dibawakan [dan juga sulit dicerna bagi telinga orang yang belum biasa mendengarnya ☺].  "Scary…" kata anak jaman now. Tapi kami memberanikan diri untuk mencoba merasakan dan menyelami keindahan musik Bach yang terkenal sebagai bapak counterpoint. Yaitu pembentukan harmoni titik ketemu titik ;  harmoni yang dibentuk dari pertemuan tema-tema melodik yang dinyanyikan masing-masing part. Bach juga dikenal sebagai pemusik yang sangat religius. Musik Bach dikenal bisa membangkitkan religiusitas dari pendengar ataupun pembawa musik-musiknya. 
+              Kali ini kami akan membawakan : Choral settings dari “Christmas Oratorio” karya Bach (BWV 248), berupa 5 cuplikan lagu bagian chorus yang diambil dari part I – III. Chorus No.1 & No.9 - (Part 1) ; No.21 & No.23 – (Part 2) ; No.24 – (Part 3).
+              Bach membuat 6 set Kantata untuk oratorio ini, dimana tiap kantata terdiri dari banyak movements yang dibawakan oleh koor dan para solis , dengan iringan orkestra. Tentu tidak mudah bagi paduan suara gereja untuk membawakan karya Bach ini secara lengkap pada masa sekarang. Choral settings ini disusun dan diaransemen oleh Holger Gehring, dengan menyusun iringan untuk organ yang diadaptasi dari orkestrasi aslinya. Ini disusun agar banyak paduan suara bisa berkesempatan untuk menampilkan bagian choral yang paling terkenal dari oratorio Bach ini, tanpa dituntut untuk menyediakan orkestra yang besar. Kali ini kami akan membawakan karya ini dengan iringan pada piano, keyboard, dan organ. 
+            </p>
+            <p>
+             Lagu 1 “Jauchzet frohlocket…” memiliki struktur musik barok yang khas. Dengan struktur birama dan ritme yang jelas. Merupakan kombinasi antara bagian hymnal yang homofoni diseling dengan bagian-bagian polifoni. Pola-pola melodik dari masing-masing bagian koor seringkali merupakan imitasi berbagai bunyi instrumen dari orkestra. 
+             Lagu 2 “Ach mein herzliebes Jesulein” – memiliki struktur himne. Melodinya juga kita cukup familiar. Yang menarik adalah iringan musiknya yang ringan dan ritmis , menggambarkan kegembiraan akan kehadiran seorang bayi kecil.
+             Lagu 3 “Ehre sei Gott in der Hohe” – ini lagu yang paling menantang dalam kelompok ini, mewakili “kerumitan” yang menjadi ciri “Bach”. Dengan struktur polifoni penuh sepanjang lagu dan prinsip counterpoint yang sangat kuat, ditambah bagian-bagian melismatik yang menantang. Setiap bagian (S,A,T,B) harus secara mandiri masing-masing mengeluarkan energi dari melodi yang dinyanyikannya, dengan ritme yang seragam, barulah bentuk komposisi ini bisa dirasakan. Kalau tidak, kita akan mendengar suatu keributan yang tidak jelas bentuknya.
+             Lagu ke 4 “Wir singen dir in deinem Heer” – lagu himne dengan melodi yang sama dengan Lagu 2, tapi dengan iringan yang lebih megah dan gagah.
+             Lagu 5 “Herrscher des Himmels, erhore das Lallen” – memiliki struktur seperti Lagu 1. Bagian yang homofoni diseling bagian polifoni, ditambah melismatik di beberapa bagian.
+           </p>
+           <p>
 
-        <!-- Featured Project Row -->
-        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-          <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.png" alt="">
-          </div>
-          <div class="col-xl-4 col-lg-5">
-            <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-            </div>
-          </div>
+            Setelah sesi I yang cukup berat, sesi II akan diisi dengan lagu-lagu yang lebih modern dengan bentuk musik yang lebih familiar di telinga kita pada masa kini.
+
+            Selamat menikmati pagelaran puji-pujian ini. Dan kiranya semuanya hanya untuk kebesaran nama Tuhan.
+
+
+            Soli Deo Gloria.
+          </p>
         </div>
 
-        <!-- Project One Row -->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
-          </div>
-          <div class="col-lg-6">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                  <hr class="d-none d-lg-block mb-0 ml-0">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project Two Row -->
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
-          </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                  <hr class="d-none d-lg-block mb-0 mr-0">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <!-- SnapWidget -->
+        
 
       </div>
     </section>
@@ -125,51 +142,14 @@
 
         <div class="row">
 
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-envelope text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Email</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
+          <a href="https://www.instagram.com/magnificat.mccs/" class="mx-2">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.facebook.com/magnificatchoir.mccs/" class="mx-2">
             <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#" class="mx-2">
-            <i class="fab fa-github"></i>
           </a>
         </div>
 
