--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div>
           <img src="img/The awakening-text-outlined.png" style="width: 80%;">
         </div>
-        <a href="https://www.dropbox.com/s/76cfi2c7syvgqls/Libretto%20-%20The%20Awakening.pdf?dl=0" class="btn btn-primary js-scroll-trigger" style="margin-top: 50px">Get Libretto</a>
+        <a href="https://drive.google.com/file/d/1qQoGKVjMtcBlAoZxeHFIw-wGo9YBafDO/view?usp=sharing" class="btn btn-primary js-scroll-trigger" style="margin-top: 50px">Get Libretto</a>
       </div>
     </div>
   </header>
